--- a/dashboard.html
+++ b/dashboard.html
@@ -65,8 +65,7 @@
     <div id="page-curtain"></div>
 
     <!-- Navigation -->
-    <nav id="main-nav"
-        class="fixed top-0 w-full z-50 px-6 py-4 flex items-center justify-between transition-all duration-700 opacity-0 -translate-y-[100px]">
+    <nav id="main-nav" class="fixed top-0 w-full z-50 px-6 py-4 flex items-center justify-between">
         <div id="nav-container"
             class="max-w-7xl mx-auto w-full flex items-center justify-between px-10 py-5 rounded-[40px] transition-all duration-500">
             <a href="index.html" class="flex items-center gap-1 group">
