--- a/admin-login.html
+++ b/admin-login.html
@@ -173,29 +173,32 @@
         </div>
     </div>
 
+    <!-- Core Logic -->
+    <script src="js/main.js"></script>
+
     <script>
         // =========================================
         //  CK TRAVELS — ADMIN LOGIN MOTION v10
         // =========================================
 
         window.addEventListener('load', () => {
-            // Cinematic card entry with back.out bounce
+            // Cinematic card entry with back.out bounce from requirements
             gsap.from('#admin-login-card', {
                 scale: 0.8,
                 opacity: 0,
-                y: 60,
                 duration: 1.2,
                 ease: 'back.out(1.7)'
             });
 
             // Stagger children
             gsap.from('#admin-login-card > *', {
-                opacity: 0, y: 15, stagger: 0.1,
-                duration: 0.8, ease: 'power3.out', delay: 0.5
+                opacity: 0,
+                y: 15,
+                stagger: 0.1,
+                duration: 0.8,
+                ease: 'power3.out',
+                delay: 0.5
             });
-
-            // Init magnetic buttons
-            initMagneticButtons();
         });
 
         // Interactive field labels — pop up & orange on focus
@@ -228,30 +231,6 @@
                     onComplete: () => { navigateWithCurtain('admin-dashboard.html'); }
                 });
             }, 1200);
-        }
-
-        // === REUSABLE FUNCTIONS ===
-        function navigateWithCurtain(href) {
-            gsap.to("#page-curtain", {
-                left: 0, duration: 0.8, ease: "expo.inOut",
-                onComplete: () => { window.location.href = href; }
-            });
-        }
-
-        function initMagneticButtons() {
-            document.querySelectorAll('.magnetic-wrap').forEach(wrap => {
-                const btn = wrap.querySelector('.magnetic-btn');
-                if (!btn) return;
-                wrap.addEventListener('mousemove', (e) => {
-                    const rect = wrap.getBoundingClientRect();
-                    const x = e.clientX - rect.left - rect.width / 2;
-                    const y = e.clientY - rect.top - rect.height / 2;
-                    gsap.to(btn, { x: x * 0.4, y: y * 0.4, duration: 0.4, ease: "power2.out" });
-                });
-                wrap.addEventListener('mouseleave', () => {
-                    gsap.to(btn, { x: 0, y: 0, duration: 0.6, ease: "elastic.out(1, 0.3)" });
-                });
-            });
         }
     </script>
 </body>
